--- a/style.css
+++ b/style.css
@@ -197,3 +197,14 @@ button.ghost {
 }
 
 /* move overlay back to the right */
+.container.right-panel-active .overlay {
+  transform: translateX(50%);
+}
+
+.container.right-panel-active .overlay-left {
+  transform: translateX(0);
+}
+
+.container.right-panel-active .overlay-right {
+  transform: translateX(20%);
+}
