--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
 
 body {
   font-family: "Montserrat", "sans-serif";
-  background: #f6f5f7;
+  background: #dae2f8; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #d6a4a4, #dae2f8);
+  background: linear-gradient(to top, #d6a4a4, #dae2f8);
+
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -86,8 +89,8 @@ a {
 
 button {
   border-radius: 20px;
-  border: 1px solid #ff4b2b;
-  background: #ff4b2b;
+  border: 1px solid #6a82fb;
+  background: #6a82fb;
   color: #fff;
   font-size: 12px;
   font-weight: bold;
@@ -142,9 +145,9 @@ button.ghost {
 }
 
 .overlay {
-  background: #ff416c;
-  background: linear-gradient(to right, #ff4b2b, #ff416c) no-repeat 0 0 / cover;
-  color: #fff;
+  background: #fc5c7d;
+  background: linear-gradient(to right, #6a82fb, #fc5c7d) no-repeat 0 0 / cover;
+  color: #f7f7f7;
   position: relative;
   left: -100%;
   height: 100%;
